# rust_protobuf

./: .bazelignore  .gitignore  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  SPECS.md  TODO.md  bootcrap.sh  build.rs  generate_descriptor.sh
bazel/: BUILD.bazel  proto_descriptor_set.bzl
benches/: proto_bench.rs
benchmark/: Cargo.toml  build.rs
benchmark/benches/: proto_bench.rs
codegen/: BUILD  BUILD.bazel  Cargo.toml  MODULE.bazel  bazel-bin  bazel-codegen  bazel-out  bazel-testlogs  codegen.cpp  example.proto  protocrap.bzl
codegen/codegen-tests/: Cargo.toml  build.rs
codegen/codegen-tests/proto/: defaults_test.proto
codegen/codegen-tests/src/: lib.rs
codegen/src/: generator.rs  lib.rs  main.rs  names.rs  static_gen.rs  tables.rs
conformance/: BUILD.bazel  Cargo.toml  README.md  build.rs  failing_tests.txt
conformance/src/: lib.rs  main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode_chunked.rs  decode_raw.rs
patches/: BUILD.bazel  protobuf_test_messages_visibility.patch
proto/: BUILD.bazel  example.proto
protocrap/: Cargo.toml  bootcrap.sh
protocrap-codegen/: Cargo.toml
protocrap-codegen/src/: generator.rs  main.rs  names.rs  static_gen.rs  tables.rs
protocrap/benchmark/benches/: proto_bench.rs
protocrap/codegen-tests/: Cargo.toml
protocrap/codegen-tests/src/: lib.rs
protocrap/src/: arena.rs  base.rs  containers.rs  decoding.rs  descriptor.pc.rs  encoding.rs  lib.rs  reflection.rs  serde.rs  utils.rs  wire.rs
protocrap/src/codegen/: generator.rs  mod.rs  names.rs  tables.rs
protocrap_stable/: Cargo.toml  bootcrap.sh
protocrap_stable/benchmark/: Cargo.toml
protocrap_stable/codegen-tests/: Cargo.toml  build.rs
protocrap_stable/codegen-tests/proto/: test.proto
protocrap_stable/src/: base.rs  containers.rs  decoding.rs  descriptor.pc.rs  lib.rs  main.rs  serde.rs  tables.rs
protocrap_stable/src/codegen/: generator.rs  lib.rs  mod.rs  static_gen.rs
src/: BUILD.bazel  arena.rs  base.rs  containers.rs  decoding.rs  descriptor.pc.rs  descriptor.rs  encoding.rs  lib.rs  main.rs  reflection.rs  repeated_field.rs  serde.rs  tables.rs  test.rs  utils.rs  wire.rs
src/tests/: test.rs
