cargo-features = ["edition2024"]

[package]
name = "protocrap"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
futures = "0.3.31"
prost = { version = "0.13", optional = true }

[dev-dependencies]
criterion = "0.5"
prost = "0.13"

[build-dependencies]
prost-build = "0.13"

[features]
bench = ["prost"]

[[bench]]
name = "proto_bench"
harness = false

[profile.dev]
panic = 'abort'

[profile.release]
panic = 'abort'

