[workspace]
members = [".", "codegen/codegen-tests", "benchmark", "codegen", "conformance"]
resolver = "2"

[package]
name = "protocrap"
version = "0.1.14"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
futures = "0.3.31"
serde = { version = "1.0.228", optional = true}
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }

[features]
default = ["std", "serde_support"]
serde_support = ["serde"]
std = []

[profile.dev]
panic = 'abort'

[profile.release]
panic = 'abort'

