module(
    name = "proto_compiler",
    repo_name = "protocrap",
)

bazel_dep(name = "protobuf", version = "29.3")
bazel_dep(name = "rules_proto", version = "7.0.2")

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "f5fbd4cee671d8d908f37c83abaf70fba5928fc7",
    # Replace the commit hash (above) with the latest (https://github.com/hedronvision/bazel-compile-commands-extractor/commits/main).
    # Even better, set up Renovate and let it do the work for you (see "Suggestion: Updates" in the README).
)
