module(
    name = "protocrap",
    version = "0.1.0",
)

bazel_dep(name = "protobuf", version = "30.0")

# Use main branch - it doesn't have the rules_ruby issue
git_override(
    module_name = "protobuf",
    remote = "https://github.com/protocolbuffers/protobuf.git",
    commit = "dd7c6f852f4c7ad38061f04701c470a60fd0f22a",
    patches = ["//patches:protobuf_test_messages_visibility.patch"],
    patch_strip = 1,
)
