[package]
name = "protocrap-benchmarks"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
protocrap = { path = ".." }
codegen-tests = { path = "../codegen/codegen-tests" }
prost = { version = "0.14.1" }
serde = { version = "1.0.228" }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "proto_bench"
harness = false
