[package]
name = "protocrap-conformance"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "conformance-protocrap"
path = "src/main.rs"

[dependencies]
protocrap = { path = ".." }
anyhow = "1.0"
byteorder = "1.5.0"
serde_json = "1.0.147"
serde = "1.0.228"

[build-dependencies]
protocrap-codegen = { path = "../codegen" }
