[package]
name = "protocrap-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
protocrap = { path = ".." }

[[bin]]
name = "decode_raw"
path = "fuzz_targets/decode_raw.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decode_chunked"
path = "fuzz_targets/decode_chunked.rs"
test = false
doc = false
bench = false
