[package]
name = "protocrap-codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing"] }
proc-macro2 = "1.0"
prettyplease = "0.2"
prost-reflect = "0.16.3"
protocrap = { path = "../protocrap" }

[lib]
name = "protocrap_codegen"

[[bin]]
name = "protocrap-codegen"
