cargo-features = ["edition2024"]

[package]
name = "protocrap"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
futures = "0.3.31"
serde = { version = "1.0.228", optional = true}

[features]
default = ["std", "serde_support"]
serde_support = ["serde"]
std = []

[profile.dev]
panic = 'abort'

[profile.release]
panic = 'abort'

