[package]
name = "protocrap_stable"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
futures = "0.3.31"
serde = { version = "1.0.228", optional = true}

# Code generation dependencies (optional, only used when building the codegen binary)
quote = { version = "1.0", optional = true }
syn = { version = "2.0", features = ["full", "parsing"], optional = true }
proc-macro2 = { version = "1.0", optional = true }
prettyplease = { version = "0.2", optional = true }
prost-reflect = { version = "0.16.3", optional = true }

# Library
[lib]
name = "protocrap_stable"
path = "src/lib.rs"

# Binary (compiler)
[[bin]]
name = "protocrap-codegen"
path = "src/main.rs"
required-features = ["codegen"]  # Binary only builds with this feature!

[features]
default = ["std", "serde_support"]
serde_support = ["serde"]
std = []
codegen = ["quote", "syn", "proc-macro2", "prettyplease", "prost-reflect"]

[profile.dev]
panic = 'abort'

[profile.release]
panic = 'abort'

