[package]
name = "codegen-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
protocrap = { path = ".." }
prost = { version = "0.14.1" }
serde = { version = "1.0.228" }
serde_json = "1.0.104"

[dev-dependencies]
criterion = "0.5"

[build-dependencies]
prost-build = "0.14.1"
protocrap = { path = "../../protocrap", features = ["codegen"] }
